#545 fix: adjust definition line and filter z-index to allow selection

--- a/santa-fe/src/app/modules/core/containers/security-definition-configurator/security-definition-configurator.container.scss
+++ b/santa-fe/src/app/modules/core/containers/security-definition-configurator/security-definition-configurator.container.scss
@@ -39,7 +39,7 @@ $securityDefinitionConfigurator_ctas_height: 6rem;
             @include mix_fixed_div(absolute, $z_index_base_item_solid);
             @include mix_border_generator($typical_border_width 0 0 0);
             margin-top: $spacing_large - $spacing_xx_small;
-            width: 100%;
+            width: 90%;
             height: 50%;
           }
         }
@@ -99,7 +99,7 @@ $securityDefinitionConfigurator_ctas_height: 6rem;
     }
   }
   &__filters {
-    @include mix_fixed_div(absolute, $z_index_buried_item);
+    @include mix_fixed_div(absolute, $z_index_base_item_solid);
     @include mix_calculate(height, 100%, $securityDefinitionConfigurator_ctas_height, '-');
     display: flex;
     top: 0;
@@ -340,7 +340,7 @@ $securityDefinitionConfigurator_ctas_height: 6rem;
   &--filterActiveState {
     #{$blockName} {
       &__filters {
-        @include mix_fixed_div(absolute, $z_index_base_item_solid);
+        @include mix_fixed_div(absolute, $z_index_base_item_lift);
         &-content {
           @include mix_border_generator(3px, $color_active);
           transform: translate(0, 0) scale(1, 1);
